fix(addon-table): fix arrow visibility in safari (#1050)
* fix(addon-table): fix arrow visibility in safari

* chore: lint fix

--- a/projects/addon-table/components/table/th/th.style.less
+++ b/projects/addon-table/components/table/th/th.style.less
@@ -111,6 +111,10 @@
 
     &:focus-visible {
         background: var(--tui-selection);
+
+        & .arrow {
+            opacity: 1;
+        }
     }
 
     &:hover {
@@ -118,7 +122,6 @@
     }
 
     &_sorted,
-    &:focus-visible,
     &:hover {
         & .arrow {
             opacity: 1;
